[package]
name = "crond"
version = "0.0.1"
authors = ["Cron.near", "@trevorjtclarke"]
edition = "2018"

[dependencies]
clap = "2.33.0"
log = "0.4"
env_logger = "0.8"

near-crypto = { git = "https://github.com/near/nearcore", rev="ab4f0c1c481b503e725798e994a58964ed6bc49b" }
near-primitives = { git = "https://github.com/near/nearcore", rev="ab4f0c1c481b503e725798e994a58964ed6bc49b" }
near-jsonrpc-client = { git = "https://github.com/near/nearcore", rev="ab4f0c1c481b503e725798e994a58964ed6bc49b" }
neard = { git = "https://github.com/near/nearcore", rev="ab4f0c1c481b503e725798e994a58964ed6bc49b" }

testlib = { git = "https://github.com/near/nearcore", rev="ab4f0c1c481b503e725798e994a58964ed6bc49b" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"